--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp==3.8.1
-beautifulsoup4==4.11.1
+aiohttp==3.8.5
+beautifulsoup4==4.13.0
 bs4==0.0.1
-IMDbPY==2021.4.18
-pymongo==3.11.4
-Pyrogram==2.0.27
-requests==2.28.0
-TgCrypto==1.2.2
-dnspython
+IMDbPY==2023.4.1
+pymongo==4.8.0
+Pyrogram==2.1.26
+requests==2.31.0
+TgCrypto==1.2.3
+dnspython==2.4.2
